# Alert_Trade

./: README.md
acess_token_generator/: Dockerfile  go.mod  main.go
additional application apis/: go.mod  go.sum  main.go
additional_rust_api/additional_rust_api/: Cargo.toml  Dockerfile
additional_rust_api/additional_rust_api/src/: main.rs
alert_trade_llm_api/: go.mod  go.sum  main.go
alert_trade_llm_api2/: go.mod  go.sum  main.go
alert_trade_male_report_system/: go.mod  main.go
alert_trade_metrics_ratios_rust/: Cargo.toml  Dockerfile
alert_trade_metrics_ratios_rust/src/: main.rs
alert_trade_new_news/: Dockerfile  go.mod  go.sum  main.go
angleoneorderplacer/: Dockerfile  go.mod  go.sum  main.go
bactester/: indicator_master.go
buisness logic flow chart/: logical_flow_chart.drawio
excel_taker_generator/: main.go  trade_2425_6XA39S (1).xlsx
get corporate actions/: Dockerfile  go.mod  go.sum  main.go
golang bulk block deals cmots/: Dockerfile  go.mod  main.go
golang fundamentals/: go.mod  main.go
golang result cmots api/: Dockerfile  go.mod  main.go
golang screener/: Dockerfile  go.mod  main.go
golang_buy_sell_upstox/: go.mod  go.sum  main.go
golang_fundamentals cmots/: go.mod  main.go
golang_fundamentals_cmots_quaterly/: go.mod  go.sum  main.go
golang_get_key metrics_api/: go.mod  go.sum  main.go
golang_key_fundamental_sentiment/: Dockerfile  go.mod  main.go
golang_portfolio_key_fundamentals/: go.mod  main.go
mf increment decrement api/: Dockerfile  go.mod  go.sum  main.go
mf_master_golang/: go.mod  go.sum  main.go
mpmla_api/mpmla_api/MpMlaAPI/: Cargo.toml  Dockerfile
mpmla_api/mpmla_api/MpMlaAPI/src/: main.rs
returns_generator_and_widget_input_taker/: go.mod  main.go
screen_master_api/: go.mod  go.sum  main.go
script_master_generator/: go.mod  go.sum  main.go
sqls/: 16-12-2024.sql  dumb_15-10-2024.sql  dump 16-10-2024.sql  dump 28-10-2024.sql  dump05082024.sql  dump13-08-2024.sql
stock fundamental indicators/: go.mod  main.go
stock wise google analytics/: Dockerfile  go.mod  go.sum  main.go
trade_alert_news/: Dockerfile  go.mod  go.sum  (+1 more)
(+25 files in other folders)
