[package]
name = "alert_trade_metrics_ratios_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.9"
prettytable = "0.10"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }
pretty_env_logger = "0.5.0"
csv = "1.1"
# chrono for date and time handling
chrono = { version = "0.4", features = ["serde"] }