[package]
name = "additional_rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "mysql", "macros"] }
actix-web = "4.0"
log = "0.4"
env_logger = "0.11.5"
chrono = "0.4"