[package]
name = "MpMlaAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.0", features = ["mysql", "runtime-tokio-native-tls"] }
dotenv = "0.15"  # Optional: for loading env variables
